# oal

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  source.oal
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
examples/: base.yaml  main.oal  module.oal  oal.toml  openapi.yaml
oal/: Cargo.toml
oal-cli/: Cargo.toml
oal-cli/src/: config.rs  main.rs
oal-client/: Cargo.toml
oal-client/src/: config.rs  lib.rs  utf16.rs  utf16_tests.rs
oal-client/src/cli/: mod.rs
oal-client/src/lsp/: dispatcher.rs  handlers.rs  mod.rs  state.rs  unicode.rs
oal-codegen/: Cargo.toml
oal-codegen/src/: lib.rs
oal-compiler/: Cargo.toml
oal-compiler/src/: annotation.rs  annotation_tests.rs  compile.rs  compile_tests.rs  defgraph.rs  definition.rs  env.rs  environment.rs  errors.rs  eval.rs  eval_tests.rs  expr.rs  inference.rs  inference_tests.rs  lib.rs  locator.rs  module.rs  module_tests.rs  node.rs  reduction.rs  reduction_tests.rs  resolve.rs  resolve_tests.rs  resolver.rs  scan.rs  scope.rs  scope_tests.rs  spec.rs  spec_tests.rs  stdlib.rs  stdlib_tests.rs  tag.rs  tests.rs  transform.rs  tree.rs  type_checker.rs  typecheck.rs  typecheck_tests.rs
oal-compiler/src/inference/: disjoin.rs  disjoin_tests.rs  mod.rs  tag.rs  tests.rs  unify.rs  union.rs  union_tests.rs
oal-compiler/src/rewrite/: compile.rs  compile_tests.rs  env.rs  eval.rs  eval_tests.rs  infer.rs  infer_tests.rs  mod.rs  module.rs  module_tests.rs  resolve.rs  resolve_tests.rs  tests.rs  tree.rs  typecheck.rs  typecheck_tests.rs
oal-model/: Cargo.toml
oal-model/src/: errors.rs  grammar.rs  lexicon.rs  lib.rs  locator.rs  locator_tests.rs  span.rs
oal-model/src/rewrite/: span.rs
oal-openapi/: Cargo.toml
oal-openapi/src/: lib.rs  oas.rs
oal-proto/: Cargo.toml
oal-proto/examples/: test.foo
oal-proto/src/: main.rs
oal-server/: Cargo.toml
oal-server/src/: main.rs
oal-syntax/: Cargo.toml
oal-syntax/src/: ast.rs  ast_tests.rs  atom.rs  errors.rs  grammar.pest  lexer.rs  lib.rs  parser.rs  span.rs  terminal.rs  tests.rs  try_each.rs
oal-syntax/src/rewrite/: lexer.rs  mod.rs  parser.rs  tests.rs
oal-wasm/: Cargo.toml
oal-wasm/src/: lib.rs
oal/src/: main.rs
src/: doc.txt  grammar.pest  main.rs
