[package]
name = "learning-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
pest = "2.1"
pest_derive = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
openapiv3 = "1.0.0-beta.5"
indexmap = "1.7"