[package]
name = "oal-cli"
version = "0.1.0"
edition = "2021"
authors = ["Emmanuel Bastien <os@ebastien.name>"]
license = "Apache-2.0"
description = "A language for describing web services as OpenAPI"
readme = "../README.md"
homepage = "https://github.com/ebastien/openapi-lang"
repository = "https://github.com/ebastien/openapi-lang"
keywords = ["api"]
categories = ["compilers"]

[dependencies]
oal-model = { path = "../oal-model" }
oal-syntax = { path = "../oal-syntax" }
oal-compiler = { path = "../oal-compiler" }
oal-codegen = { path = "../oal-codegen" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.9.14"
clap = { version = "3.2.23", features = ["derive"] }
anyhow = "1.0.66"