[package]
name = "oal-client"
version = "0.1.0"
edition = "2021"
authors = ["Emmanuel Bastien <os@ebastien.name>"]
license = "Apache-2.0"
description = "A language for describing web services as OpenAPI"
readme = "../README.md"
homepage = "https://www.oxlip-lang.org"
repository = "https://github.com/oxlip-lang/oal"
keywords = ["api"]
categories = ["compilers"]

[dependencies]
oal-model = { path = "../oal-model" }
oal-syntax = { path = "../oal-syntax" }
oal-compiler = { path = "../oal-compiler" }
oal-openapi = { path = "../oal-openapi" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
ariadne = "0.5"
toml = "0.8"
lsp-server = "0.7"
lsp-types = "0.95"
url = "2.4"
crossbeam-channel = "0.5"
thiserror = "2.0"
log = "0.4"
stderrlog = "0.6"