[package]
name = "oal-compiler"
version = "0.1.0"
edition = "2021"
authors = ["Emmanuel Bastien <os@ebastien.name>"]
license = "Apache-2.0"
description = "A language for describing web services as OpenAPI"
readme = "../README.md"
homepage = "https://github.com/ebastien/openapi-lang"
repository = "https://github.com/ebastien/openapi-lang"
keywords = ["api"]
categories = ["compilers"]

[dependencies]
oal-model = { path = "../oal-model" }
oal-syntax = { path = "../oal-syntax" }
indexmap = "1.8.1"
enum-map = "2.1.0"
enum-map-derive = "0.10.0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.14"
anyhow = "1.0.57"
backtrace = "0.3"
thiserror = "1.0.37"
petgraph = "0.6.2"

