[package]
name = "oal-compiler"
version = "0.1.0"
edition = "2021"
authors = ["Emmanuel Bastien <os@ebastien.name>"]
license = "Apache-2.0"
description = "A language for describing web services as OpenAPI"
readme = "../README.md"
homepage = "https://github.com/ebastien/openapi-lang"
repository = "https://github.com/ebastien/openapi-lang"
keywords = ["api"]
categories = ["compilers"]

[dependencies]
oal-model = { path = "../oal-model" }
oal-syntax = { path = "../oal-syntax" }
indexmap = "1.9"
enum-map = "2.6"
enum-map-derive = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
backtrace = "0.3"
thiserror = "1.0"
petgraph = "0.6"

