[package]
name = "oal-compiler"
version = "0.1.0"
edition = "2021"
authors = ["Emmanuel Bastien <os@ebastien.name>"]
license = "Apache-2.0"
description = "A high-level functional programming language for designing OpenAPI definitions"
readme = "../README.md"
homepage = "https://www.oxlip-lang.org"
repository = "https://github.com/oxlip-lang/oal"
keywords = ["api"]
categories = ["compilers"]

[dependencies]
oal-model = { path = "../oal-model" }
oal-syntax = { path = "../oal-syntax" }
indexmap = "2.0"
enum-map = "2.6"
enum-map-derive = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
backtrace = "0.3"
thiserror = "1.0"
petgraph = "0.6"
sha2 = "0.10"
generational-arena = "0.2"