[package]
name = "oal-model"
version = "0.1.0"
edition = "2021"
authors = ["Emmanuel Bastien <os@ebastien.name>"]
license = "Apache-2.0"
description = "A language for describing web services as OpenAPI"
readme = "../README.md"
homepage = "https://github.com/ebastien/openapi-lang"
repository = "https://github.com/ebastien/openapi-lang"
keywords = ["api"]
categories = ["compilers"]

[dependencies]
chumsky = "0.9"
string-interner = "0.14"
generational_token_list = "0.1"
generational-indextree = "1.1"
thiserror = "1.0"
url = "2.4"
ariadne = "0.3"