[package]
name = "oal-model"
version = "0.1.0"
edition = "2021"
authors = ["Emmanuel Bastien <os@ebastien.name>"]
license = "Apache-2.0"
description = "A language for describing web services as OpenAPI"
readme = "../README.md"
homepage = "https://github.com/ebastien/openapi-lang"
repository = "https://github.com/ebastien/openapi-lang"
keywords = ["api"]
categories = ["compilers"]

[dependencies]
string-interner = "0.14"
generational_token_list = "0.1"
generational-indextree = "1.1"
generational-arena = "0.2"
thiserror = "1.0"
url = "2.4"
sha2 = "0.10"
