[package]
name = "oal-model"
version = "0.1.0"
edition = "2021"
authors = ["Emmanuel Bastien <os@ebastien.name>"]
license = "Apache-2.0"
description = "A high-level functional programming language for designing OpenAPI definitions"
readme = "../README.md"
homepage = "https://www.oxlip-lang.org"
repository = "https://github.com/oxlip-lang/oal"
keywords = ["api"]
categories = ["compilers"]

[dependencies]
string-interner = "0.17"
generational_token_list = "0.1"
generational-indextree = "1.1"
generational-arena = "0.2"
thiserror = "1.0"
url = "2.4"
sha2 = "0.10"
