[package]
name = "oal-server"
version = "0.1.0"
edition = "2021"
authors = ["Emmanuel Bastien <os@ebastien.name>"]
license = "Apache-2.0"
description = "A language server for OpenAPI Lang"
readme = "../README.md"
homepage = "https://github.com/ebastien/openapi-lang"
repository = "https://github.com/ebastien/openapi-lang"
keywords = ["api"]
categories = ["compilers"]

[dependencies]
lsp-server = "0.6.0"
lsp-types = "0.93.1"
serde = "1.0.144"
serde_json = "1.0.85"
