[package]
name = "oal-syntax"
version = "0.1.0"
edition = "2021"
authors = ["Emmanuel Bastien <os@ebastien.name>"]
license = "Apache-2.0"
description = "A high-level functional programming language for designing OpenAPI definitions"
readme = "../README.md"
homepage = "https://www.oxlip-lang.org"
repository = "https://github.com/oxlip-lang/oal"
keywords = ["api"]
categories = ["compilers"]

[dependencies]
oal-model = { path = "../oal-model" }
enum-map = "2.6"
enum-map-derive = "0.12"
string-interner = "0.14"
generational_token_list = "0.1"
generational-indextree = "1.1"
thiserror = "1.0"
logos = "0.13.0"